--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@
       font-size: 1.8rem;
       margin-bottom: 10px;
       color: var(--white); /* fixed */
+	  font-family: "Georgia", serif;
     }
 
     /* Animation */
@@ -238,6 +239,7 @@
   .partnership-text h4 {
     font-size: 1rem;
     font-weight: bold;
+	font-family: "Georgia", serif;
     color: var(--burgundy);
     text-transform: uppercase;
     margin-bottom: 0.8rem;
@@ -306,12 +308,14 @@
 .location-section h2 {
   color: var(--coffee);
   font-size: 2rem;
+  font-family: "Georgia", serif;
   margin-bottom: 10px;
 }
 
 .location-section p {
   color: var(--burgundy);
   margin-bottom: 20px;
+  font-family: "Georgia", serif;
 }
 
 #map {
@@ -422,6 +426,7 @@
 .footer h4 {
   margin-bottom: 1rem;
   font-size: 1.1rem;
+  font-family: "Georgia", serif;
   font-weight: bold;
   color: #f5f5dc;
 }
@@ -443,6 +448,7 @@
   margin: 0.5rem 0;
   line-height: 1.6;
   color: #f5f5dc;
+  font-family: "Georgia", serif;
 }
 
 /* --- Mobile Responsiveness --- */
@@ -467,8 +473,81 @@
 }
 
 
+ .instagram-section {
+  text-align: center;
+  padding: 60px 20px;
+  background-image: url('background.png')
+}
+
+.instagram-section h2 {
+  font-size: 2rem;
+  font-family: "Georgia", serif;
+  color: var(--coffee);
+  margin-bottom: 10px;
+}
+
+.instagram-section p {
+  margin-bottom: 30px;
+  color: var(--coffee);
+  font-family: "Georgia", serif;
+}
+
+.instagram-gallery {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  flex-wrap: wrap;
+}
+
+.insta-item img {
+  width: 280px;
+  height: 280px;
+  object-fit: cover;
+  border-radius: 12px;
+  border: 8px solid rgba(71, 30, 22, 1); /* Thick border */
+  transition: transform 0.4s ease, box-shadow 0.3s ease;
+}
+
+.insta-item.center img {
+  width: 280px;
+  height: 280px;
+}
+
+.insta-item img:hover {
+  transform: scale(1.15);
+  box-shadow: 0 8px 30px rgba(0,0,0,0.5);
+}
+
+.btn-instagram {
+  display: inline-block;
+  margin-top: 40px;
+  padding: 14px 28px;
+  background: var(--burgundy);
+  color: var(--white);
+  text-decoration: none;
+  border-radius: 6px;
+  font-weight: bold;
+  transition: background 0.3s ease;
+}
+
+.btn-instagram:hover {
+  background: #5e1f21;
+}
 
 
+@media (max-width: 768px) {
+  .instagram-gallery {
+    flex-direction: column;
+    gap: 20px;
+  }
 
+  .insta-item img,
+  .insta-item.center img {
+    width: 90%;
+    height: auto;
+    max-width: 350px;
+  }
+}
 
 
